--- a/Frontend/trivializer/src/components/styles/Rounds.css
+++ b/Frontend/trivializer/src/components/styles/Rounds.css
@@ -5,6 +5,7 @@
   flex-flow: row;
   justify-content: space-between;
   border: 2px solid black;
+  border-radius: 10px;
   margin: 2%;
   padding: 2%;
   align-items: center;
