Moved print buttons into editGameView and began styling

--- a/Frontend/trivializer/src/components/styles/Game.css
+++ b/Frontend/trivializer/src/components/styles/Game.css
@@ -1,5 +1,9 @@
 /* Styles Game.js */
 
+.content-container {
+  background: #2da2b1;
+}
+
 .editAndRounds {
   width: 100%;
 }
@@ -9,18 +13,6 @@
   flex-flow: row;
   align-items: center;
   justify-content: space-evenly;
-}
-
-.game-buttons {
-  display: flex;
-  flex-flow: column;
-  justify-content: space-evenly;
-  height: 100%;
-}
-
-.game-buttons button {
-  margin: 10%;
-  width: 100%;
 }
 
 .hidden {
