--- a/Frontend/trivializer/src/components/styles/EditGameView.css
+++ b/Frontend/trivializer/src/components/styles/EditGameView.css
@@ -6,14 +6,8 @@
   padding: 2%;
   width: 800px;
   height: 375px;
-}
-
-.editGameView-top {
-  width: 100%;
-  display: flex;
-  flex-flow: row;
-  justify-content: space-evenly;
-  align-items: center;
+  background: #2da2b1;
+  margin: 1%;
 }
 
 .editGameView-logo {
@@ -28,19 +22,41 @@
   width: 80%;
 }
 .editGameView button {
-  max-width: 40%;
-  overflow: hidden;
+  /* max-width: 40%; */
+  /* overflow: hidden; */
+}
+
+.game-buttons {
+  display: flex;
+  flex-flow: row;
+  /* justify-content: space-evenly; */
+}
+
+/* Print Answer Key and Print Answer Sheets buttons */
+.game-buttons .printButtons {
+  width: 50%;
+  /* border: 2px solid red; */
+  justify-self: flex-start;
+}
+
+.saveButton-container {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 2px solid red; */
 }
 .saveButton {
-  margin: 0 auto;
-  margin-left: 50%;
+  /* margin: 0 auto;
+  margin-left: 50%; */
   color: white;
   background-color: #b13c2d;
   border: 1px solid #b13c2d;
   border-radius: 5px;
-  width: 300px;
+  /* width: 300px; */
   height: 50px;
 }
+
 .saveButton:hover {
   background: #2db168;
   border: 1px solid #2db168;
