--- a/Frontend/trivializer/src/components/styles/GamesList.css
+++ b/Frontend/trivializer/src/components/styles/GamesList.css
@@ -77,7 +77,7 @@
 .gamelist {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .addnewGame h3 {
