--- a/Frontend/trivializer/src/components/styles/EditGameView.css
+++ b/Frontend/trivializer/src/components/styles/EditGameView.css
@@ -4,22 +4,15 @@
   display: flex;
   flex-flow: column;
   padding: 2%;
-  width: 800px;
-  height: 375px;
+  width: 100%;
   background: #2da2b1;
   margin: 1%;
 }
 
-.editGameView-logo {
-  width: 50px;
-  height: 50px;
-  border: 2px solid black;
-  border-radius: 100%;
-}
 .editGameView input {
-  margin: 4%;
-  text-align: center;
-  width: 80%;
+  margin: 4% 0 4% 4%;
+  /* text-align: center; */
+  /* width: 80%; */
 }
 .editGameView button {
   max-width: 40%;
@@ -44,10 +37,6 @@
   cursor: pointer;
 }
 
-.game-top {
-  margin: 0 auto;
-}
-
 .editAndRounds h1 {
   margin-bottom: 0;
 }
@@ -70,35 +59,36 @@
 .title input,
 .description textarea,
 .date input {
-  width: 400px;
-  height: 45px;
+  /* width: 400px;
+  height: 45px; */
   border-radius: 5px;
   text-align: left;
+  align-self: flex-end;
   padding-left: 10px;
   border: 1px solid grey;
 }
 
 .description textarea {
   height: 90px;
-  margin-right: 30px;
+  /* margin-right: 30px;  */
 }
 
 @media screen and (max-width: 950px) {
   .game-top {
-    width: 80%;
+    /* width: 80%; */
   }
   .game-buttons {
-    display: none;
+    /* display: none; */
   }
 
   .title input,
   .description textarea,
   .date input {
-    width: 300px;
+    /* width: 300px; */
   }
 
   .description textarea {
-    margin-right: 20px;
+    /* margin-right: 20px; */
   }
 
   .saveButton {
@@ -117,7 +107,7 @@
   }
 
   .description textarea {
-    margin-right: 13px;
+    /* margin-right: 13px; */
   }
 
   .saveButton {
