--- a/Frontend/trivializer/src/components/styles/Game.css
+++ b/Frontend/trivializer/src/components/styles/Game.css
@@ -24,27 +24,20 @@
   display: none;
 }
 
-.game-title {
-  text-align: center;
-  font-size: 26px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin: 0 20px;
-}
-
-.game-description {
-  white-space: normal;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 .game-editGameView {
   overflow-y: hidden;
-  width: 50%;
+  width: 70%;
+  max-width: 600px;
+  transition: width 2s ease;
 }
-/* Animation for editGameView */
 
+.game-showModifyGame {
+  display: flex;
+  flex-flow: column;
+  align-items: flex-start;
+}
+
+/* Animation for editGameView */
 .showEditGame-enter {
   max-height: 0px;
   transition: max-height 1s ease;
@@ -62,9 +55,26 @@
   transition: all 1000ms ease-out;
 }
 
-@media screen and (max-width: 950px) {
+/* Tablet breakpoints*/
+@media screen and (max-width: 768px) {
   .game-editGameView {
-    width: 100%;
-    transition: width 2s;
+    width: 95%;
   }
+}
+
+/****** Styling for Games.js ******/
+
+.game-title {
+  text-align: center;
+  font-size: 26px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0 20px;
+}
+
+.game-description {
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
